# tutorial-deploying-django-to-elastic-beanstalk

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.ebextensions/: django.config
hello_world/: urls.py  views.py
hello_world/static/hello_world/css/: main.scss
hello_world/templates/hello_world/: hello_world.html
hello_world_django/: asgi.py  settings.py  urls.py  wsgi.py
