[tool.poetry]
name = "hello-world-django"
version = "0.1.0"
description = ""
authors = ["Bradley Marques <bradleyrcmarques@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
Django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
